k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trippzi-ingress
  namespace: trippzi
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - trippzi.needoo.in
    secretName: trippzi-tls
  rules:
  - host: trippzi.needoo.in
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: trippzi-backend-service
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: trippzi-superadmin-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trippzi-portal-service
            port:
              number: 80
